<resources>
    <string name="app_name">Friend Match</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="network_error">Sorry, we could not connect to our server. Please try later.</string>
    <string name="error_incorrect_credentials">Incorrect credentials</string>
    <string name="action_register">New to Friend Match? Register</string>
    <string name="start_button_text">LET\'S GET STARTED!</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="prompt_name">Full Name</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_about">About</string>
    <string name="share_action_intent_chooser">Share with …</string>
    <string name="share_action_text">Hi, find new friends with common hobbies.
        \nCheck out this awesome app, Friend Match.
        \nhttps://github.com/DevipriyaSarkar/FriendMatch-Frontend/releases </string>
    <string name="about_title">About</string>
    <string name="about_message">This is an app made as a part of the DBMS project by Devipriya Sarkar and Namita Roy.
        \nSay hi to us at devipriyasarkar96@gmail.com and namitaroy63@yahoo.com. \uD83D\uDE42</string>
    <string name="about_neutral_button">Sweet!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_progress_dialog_message">Hang on…\nGetting your details…</string>
    <string name="info_image_content_desc">User Profile Photo</string>
    <string name="info_error_text">Could not get profile information.</string>
    <string name="info_gender_title">Gender</string>
    <string name="info_age_title">Age</string>
    <string name="info_phone_title">Phone No.</string>
    <string name="info_location_title">Location</string>
    <string name="info_city_title">City</string>
    <string name="hobby_error_text">Could not get the hobbies.</string>
    <string name="hobby_section_title">Hobbies</string>
    <string name="info_email_title">E-mail ID</string>
    <string name="friends_section_title">Friends</string>
    <string name="friend_error_text">Could not get the friend list.</string>
    <string name="friend_image_content_desc">Friend Profile Picture</string>
    <string name="hobby_image_content_desc">Hobby Image</string>
    <string name="default_nav_user_name">User Name</string>
    <string name="default_nav_user_email">abc@example.com</string>
    <string name="suggestion_friend_section_title">Suggested Friends</string>
    <string name="suggestion_friend_progress_dialog_message">Suggesting friends for you…</string>
    <string name="user_profile_image_content_desc">User Profile Picture</string>
    <string name="hobby_empty_error">Oops. Hobby list empty.</string>
    <string name="friend_empty_error">Oops. Friend list empty.</string>
    <string name="event_empty_error">Oops. Event list empty.</string>
    <string name="mutual_hobby_section_heading">Mutual Hobbies</string>
    <string name="all_hobby_section_heading">All Hobbies</string>
    <string name="all_friends_section_heading">All Friends</string>
    <string name="user_profile_prog_dialog_msg1">Loading</string>
    <string name="user_profile_prog_dialog_msg2">\'s profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="male_radio_button_text">Male</string>
    <string name="female_radio_button_text">Female</string>
    <string name="gender_title">Gender</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_city">City</string>
    <string name="prompt_location">Locality</string>
    <string name="profile_edit_button">Edit</string>
    <string name="saving_progress_dialog_message">Saving your details. Please wait.</string>
    <string name="profile_saved_message">Profile saved.</string>
    <string name="log_out_dialog_title">Log Out</string>
    <string name="log_out_dialog_message">Are you sure you want to log out?</string>
    <string name="logout_progress_dialog_message">Logging you out. Please wait.</string>
    <string name="nav_menu_log_out">Log Out</string>
    <string name="related_hobby_section_heading">Related Hobbies</string>
    <string name="add_friend_progress_dialog_message">Adding friend.</string>
    <string name="add_friend_error">Could not add friend.</string>
    <string name="add_friend_success">Friend added.</string>
    <string name="add_event_progress_dialog_message">Adding event.</string>
    <string name="add_event_error">Could not add event.</string>
    <string name="add_event_success">Event added.</string>
    <string name="add_hobby_progress_dialog_message">Adding hobby.</string>
    <string name="add_hobby_error">Could not add hobby.</string>
    <string name="add_hobby_success">Hobby added.</string>
    <string name="remove_friend_progress_dialog_message">Removing from friend list.</string>
    <string name="remove_friend_error">Could not remove friend.</string>
    <string name="remove_friend_success">Friend removed from friend list.</string>
    <string name="remove_event_progress_dialog_message">Removing from event list.</string>
    <string name="remove_event_error">Could not remove event.</string>
    <string name="remove_event_success">Event removed from event list.</string>
    <string name="remove_hobby_progress_dialog_message">Removing from hobby list.</string>
    <string name="remove_hobby_error">Could not remove hobby.</string>
    <string name="remove_hobby_success">Hobby removed from hobby list.</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="remove_friend_dialog_title">Remove Friend</string>
    <string name="remove_hobby_dialog_title">Remove Hobby</string>
    <string name="remove_event_dialog_title">Remove Event</string>
    <string name="add_friend_dialog_title">Add Friend</string>
    <string name="add_event_dialog_title">Add Event</string>
    <string name="add_hobby_dialog_title">Add Hobby</string>
    <string name="remove_friend_dialog_message">Are you sure you want to remove this friend from your friend list?</string>
    <string name="remove_hobby_dialog_message">Are you sure you want to remove this hobby from your hobby list?</string>
    <string name="remove_event_dialog_message">Are you sure you want to remove this event from your event list?</string>
    <string name="add_friend_dialog_message">Are you sure you want to add this friend to your friend list?</string>
    <string name="add_event_dialog_message">Are you sure you want to add this event to your event list?</string>
    <string name="add_hobby_dialog_message">Are you sure you want to add this hobby to your hobby list?</string>
    <string name="suggestion_event_section_title">Suggested Events</string>
    <string name="event_error_text">Could not get the event list.</string>
    <string name="event_image_content_desc">Event Image</string>
    <string name="suggestion_event_progress_dialog_message">Suggesting events for you…</string>
    <string name="event_section_title">Events</string>
    <string name="hobby_progress_dialog_message">Getting the hobbies.</string>
    <string name="event_progress_dialog_message">Getting the events.</string>
    <string name="nav_menu_event">Events</string>
    <string name="nav_menu_hobby">Hobbies</string>
    <string name="title_activity_hobby">Hobbies</string>
    <string name="title_activity_event">Events</string>
    <string name="all_hobbies_heading">All Hobbies</string>
    <string name="user_hobbies_heading">Your Hobbies</string>
    <string name="all_event_heading">All Events</string>
    <string name="user_event_heading">Your Events</string>
    <string name="select_hobby_title">Select Hobbies</string>
    <string name="local_host_button_text">HAVE A LOCAL SERVER?</string>
    <string name="local_host_address_prompt">Local IP Address with Endpoint</string>
    <string name="hello_welcome_to_friend_match">Hello! Welcome to Friend Match!</string>
    <string name="local_host_address_empty_error">Please specify IP address</string>
    <string name="local_host_address_incorrect_error">Invalid IP Address</string>
    <string name="ip_address_allowed_digits">0123456789.:</string>
    <string name="splash_logo_content_desc">Friend Match Logo</string>

</resources>
