<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.friendmatch_frontend.friendmatch.activities.SplashActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/hello_welcome_to_friend_match"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:padding="@dimen/welcome_padding"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/start_button_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:id="@+id/startButton" />

        <Button
            android:text="@string/local_host_button_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:id="@+id/enableLocalHostButton" />

        <LinearLayout
            android:id="@+id/localHostLayout"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/localHostAddress"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_host_address_prompt"
                    android:digits="@string/ip_address_allowed_digits"
                    android:maxLines="1" />

                <Button
                    android:text="@string/start_button_text"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:id="@+id/localHostStartButton" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
