<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.friendmatch_frontend.friendmatch.activities.ProfileActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardElevation="@dimen/card_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true" >
            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center" >
                <ImageView
                    android:id="@+id/infoImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_padding"
                    android:layout_gravity="center"
                    android:contentDescription="@string/info_image_content_desc" />
                <TextView
                    android:id="@+id/infoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:padding="@dimen/card_padding"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_gender_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoGender"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_age_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/infoAge"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_email_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoEmail"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_phone_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoPhone"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_location_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoLocation"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_city_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoCity"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/infoError"
                android:layout_margin="@dimen/card_padding"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@string/info_error_text"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>