<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.friendmatch_frontend.friendmatch.UserActivity"
    tools:showIn="@layout/activity_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="@dimen/card_elevation"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_gender_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoGender"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_age_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/infoAge"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_email_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoEmail"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_phone_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoPhone"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_location_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoLocation"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/info_city_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/infoCity"
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_padding"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <include
            layout="@layout/content_hobby"
            android:id="@+id/userCommonHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/content_hobby"
            android:id="@+id/userAllHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/content_friends"
            android:id="@+id/userAllFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
